lab1/sytax.output
Terminals unused in grammar

   STRUCT
   SPACE
   AERROR
   NULLPTR
   STR
   EOL


State 9 conflicts: 3 shift/reduce
State 15 conflicts: 3 shift/reduce
State 19 conflicts: 1 reduce/reduce
State 20 conflicts: 3 shift/reduce
State 71 conflicts: 3 shift/reduce, 1 reduce/reduce
State 78 conflicts: 1 reduce/reduce
State 105 conflicts: 15 shift/reduce
State 108 conflicts: 15 shift/reduce
State 116 conflicts: 15 shift/reduce, 1 reduce/reduce
State 117 conflicts: 1 shift/reduce, 16 reduce/reduce
State 132 conflicts: 1 shift/reduce
State 146 conflicts: 15 shift/reduce
State 147 conflicts: 15 shift/reduce
State 148 conflicts: 15 shift/reduce
State 153 conflicts: 15 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ClassDefs

    2 ClassDefs: Class
    3          | Class ClassDefs

    4 Class: CLASS ID LC ClassStms RC
    5      | CLASS ID EXTENDS ID LC ClassStms RC

    6 ClassStms: ClassStm ClassStms
    7          | EMPTY

    8 ClassStm: Fun
    9         | DeclareStm

   10 Fun: VarType ID LP Args RP LC BaseStm RC
   11    | STATIC VarType ID LP Args RP LC BaseStm RC
   12    | EMPTY

   13 VarType: TYPE
   14        | ID

   15 BaseStm: Lines

   16 Lines: Line
   17      | Line Lines

   18 Line: EMPTY
   19     | IfStm
   20     | WhileStm
   21     | VarStm SEMI
   22     | DeclareStm
   23     | ReturnStm

   24 IfStm: IF LP Exp RP LC BaseStm RC
   25      | IfStm ELIfStm ElseStm

   26 ELIfStm: ELIF LP Exp RP LC BaseStm RC
   27        | EMPTY

   28 ElseStm: ELSE LC BaseStm RC
   29        | EMPTY

   30 WhileStm: WHILE LP Exp RP LC BaseStm RC

   31 DeclareStm: VarType VarStm SEMI

   32 VarStm: Exp
   33       | Exp COMMA VarStm

   34 ReturnStm: RETURN SEMI
   35          | RETURN Exp SEMI

   36 Args: EMPTY
   37     | Arg

   38 Arg: VarType ID
   39    | VarType ID COMMA Arg

   40 Exp: Constant
   41    | Call
   42    | ID DOT Call
   43    | ID DOT Constant
   44    | THIS DOT Constant
   45    | THIS DOT Call
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | Exp LB Exp RB
   58    | DPLUS ID
   59    | ID DPLUS
   60    | DMINUS ID
   61    | ID DMINUS
   62    | NEW Call

   63 Constant: ID
   64         | INT
   65         | FLOAT
   66         | BOOL

   67 Call: ID LP CallArgs RP
   68     | Call DOT ID
   69     | Call DOT ID LP CallArgs RP

   70 CallArgs: EMPTY
   71         | CallArg

   72 CallArg: Exp
   73        | Exp COMMA CallArg

   74 EMPTY: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
STATIC (258) 11
TYPE (259) 13
STRUCT (260)
EXTENDS (261) 5
CLASS (262) 4 5
RETURN (263) 34 35
IF (264) 24
ELSE (265) 28
ELIF (266) 26
WHILE (267) 30
ID (268) 4 5 10 11 14 38 39 42 43 58 59 60 61 63 67 68 69
SPACE (269)
SEMI (270) 21 31 34 35
COMMA (271) 33 39 73
ASSIGNOP (272) 48
RELOP (273) 51
PLUS (274) 46
MINUS (275) 47 55
STAR (276) 52
DIV (277) 53
AND (278) 49
OR (279) 50
DOT (280) 42 43 44 45 68 69
NOT (281) 56
LP (282) 10 11 24 26 30 54 67 69
RP (283) 10 11 24 26 30 54 67 69
LB (284) 57
RB (285) 57
LC (286) 4 5 10 11 24 26 28 30
RC (287) 4 5 10 11 24 26 28 30
AERROR (288)
DPLUS (289) 58 59
DMINUS (290) 60 61
INT (291) 64
FLOAT (292) 65
NULLPTR (293)
STR (294)
BOOL (295) 66
EOL (296)
NEW (297) 62
THIS (298) 44 45


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Program (45)
    on left: 1, on right: 0
ClassDefs (46)
    on left: 2 3, on right: 1 3
Class (47)
    on left: 4 5, on right: 2 3
ClassStms (48)
    on left: 6 7, on right: 4 5 6
ClassStm (49)
    on left: 8 9, on right: 6
Fun (50)
    on left: 10 11 12, on right: 8
VarType (51)
    on left: 13 14, on right: 10 11 31 38 39
BaseStm (52)
    on left: 15, on right: 10 11 24 26 28 30
Lines (53)
    on left: 16 17, on right: 15 17
Line (54)
    on left: 18 19 20 21 22 23, on right: 16 17
IfStm (55)
    on left: 24 25, on right: 19 25
ELIfStm (56)
    on left: 26 27, on right: 25
ElseStm (57)
    on left: 28 29, on right: 25
WhileStm (58)
    on left: 30, on right: 20
DeclareStm (59)
    on left: 31, on right: 9 22
VarStm (60)
    on left: 32 33, on right: 21 31 33
ReturnStm (61)
    on left: 34 35, on right: 23
Args (62)
    on left: 36 37, on right: 10 11
Arg (63)
    on left: 38 39, on right: 37 39
Exp (64)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62, on right: 24 26 30 32 33 35 46 47 48 49 50 51 52
    53 54 55 56 57 72 73
Constant (65)
    on left: 63 64 65 66, on right: 40 43 44
Call (66)
    on left: 67 68 69, on right: 41 42 45 62 68 69
CallArgs (67)
    on left: 70 71, on right: 67 69
CallArg (68)
    on left: 72 73, on right: 71 73
EMPTY (69)
    on left: 74, on right: 7 12 18 27 29 36 70


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    ClassDefs  go to state 3
    Class      go to state 4


State 1

    4 Class: CLASS . ID LC ClassStms RC
    5      | CLASS . ID EXTENDS ID LC ClassStms RC

    ID  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: ClassDefs .

    $default  reduce using rule 1 (Program)


State 4

    2 ClassDefs: Class .
    3          | Class . ClassDefs

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (ClassDefs)

    ClassDefs  go to state 7
    Class      go to state 4


State 5

    4 Class: CLASS ID . LC ClassStms RC
    5      | CLASS ID . EXTENDS ID LC ClassStms RC

    EXTENDS  shift, and go to state 8
    LC       shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    3 ClassDefs: Class ClassDefs .

    $default  reduce using rule 3 (ClassDefs)


State 8

    5 Class: CLASS ID EXTENDS . ID LC ClassStms RC

    ID  shift, and go to state 10


State 9

    4 Class: CLASS ID LC . ClassStms RC

    STATIC  shift, and go to state 11
    TYPE    shift, and go to state 12
    ID      shift, and go to state 13

    STATIC    [reduce using rule 74 (EMPTY)]
    TYPE      [reduce using rule 74 (EMPTY)]
    ID        [reduce using rule 74 (EMPTY)]
    $default  reduce using rule 74 (EMPTY)

    ClassStms   go to state 14
    ClassStm    go to state 15
    Fun         go to state 16
    VarType     go to state 17
    DeclareStm  go to state 18
    EMPTY       go to state 19


State 10

    5 Class: CLASS ID EXTENDS ID . LC ClassStms RC

    LC  shift, and go to state 20


State 11

   11 Fun: STATIC . VarType ID LP Args RP LC BaseStm RC

    TYPE  shift, and go to state 12
    ID    shift, and go to state 13

    VarType  go to state 21


State 12

   13 VarType: TYPE .

    $default  reduce using rule 13 (VarType)


State 13

   14 VarType: ID .

    $default  reduce using rule 14 (VarType)


State 14

    4 Class: CLASS ID LC ClassStms . RC

    RC  shift, and go to state 22


State 15

    6 ClassStms: ClassStm . ClassStms

    STATIC  shift, and go to state 11
    TYPE    shift, and go to state 12
    ID      shift, and go to state 13

    STATIC    [reduce using rule 74 (EMPTY)]
    TYPE      [reduce using rule 74 (EMPTY)]
    ID        [reduce using rule 74 (EMPTY)]
    $default  reduce using rule 74 (EMPTY)

    ClassStms   go to state 23
    ClassStm    go to state 15
    Fun         go to state 16
    VarType     go to state 17
    DeclareStm  go to state 18
    EMPTY       go to state 19


State 16

    8 ClassStm: Fun .

    $default  reduce using rule 8 (ClassStm)


State 17

   10 Fun: VarType . ID LP Args RP LC BaseStm RC
   31 DeclareStm: VarType . VarStm SEMI

    ID      shift, and go to state 24
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    VarStm    go to state 35
    Exp       go to state 36
    Constant  go to state 37
    Call      go to state 38


State 18

    9 ClassStm: DeclareStm .

    $default  reduce using rule 9 (ClassStm)


State 19

    7 ClassStms: EMPTY .
   12 Fun: EMPTY .

    RC        reduce using rule 7 (ClassStms)
    RC        [reduce using rule 12 (Fun)]
    $default  reduce using rule 12 (Fun)


State 20

    5 Class: CLASS ID EXTENDS ID LC . ClassStms RC

    STATIC  shift, and go to state 11
    TYPE    shift, and go to state 12
    ID      shift, and go to state 13

    STATIC    [reduce using rule 74 (EMPTY)]
    TYPE      [reduce using rule 74 (EMPTY)]
    ID        [reduce using rule 74 (EMPTY)]
    $default  reduce using rule 74 (EMPTY)

    ClassStms   go to state 39
    ClassStm    go to state 15
    Fun         go to state 16
    VarType     go to state 17
    DeclareStm  go to state 18
    EMPTY       go to state 19


State 21

   11 Fun: STATIC VarType . ID LP Args RP LC BaseStm RC

    ID  shift, and go to state 40


State 22

    4 Class: CLASS ID LC ClassStms RC .

    $default  reduce using rule 4 (Class)


State 23

    6 ClassStms: ClassStm ClassStms .

    $default  reduce using rule 6 (ClassStms)


State 24

   10 Fun: VarType ID . LP Args RP LC BaseStm RC
   42 Exp: ID . DOT Call
   43    | ID . DOT Constant
   59    | ID . DPLUS
   61    | ID . DMINUS
   63 Constant: ID .
   67 Call: ID . LP CallArgs RP

    DOT     shift, and go to state 41
    LP      shift, and go to state 42
    DPLUS   shift, and go to state 43
    DMINUS  shift, and go to state 44

    $default  reduce using rule 63 (Constant)


State 25

   55 Exp: MINUS . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 46
    Constant  go to state 37
    Call      go to state 38


State 26

   56 Exp: NOT . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 47
    Constant  go to state 37
    Call      go to state 38


State 27

   54 Exp: LP . Exp RP

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 48
    Constant  go to state 37
    Call      go to state 38


State 28

   58 Exp: DPLUS . ID

    ID  shift, and go to state 49


State 29

   60 Exp: DMINUS . ID

    ID  shift, and go to state 50


State 30

   64 Constant: INT .

    $default  reduce using rule 64 (Constant)


State 31

   65 Constant: FLOAT .

    $default  reduce using rule 65 (Constant)


State 32

   66 Constant: BOOL .

    $default  reduce using rule 66 (Constant)


State 33

   62 Exp: NEW . Call

    ID  shift, and go to state 51

    Call  go to state 52


State 34

   44 Exp: THIS . DOT Constant
   45    | THIS . DOT Call

    DOT  shift, and go to state 53


State 35

   31 DeclareStm: VarType VarStm . SEMI

    SEMI  shift, and go to state 54


State 36

   32 VarStm: Exp .
   33       | Exp . COMMA VarStm
   46 Exp: Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   57    | Exp . LB Exp RB

    COMMA     shift, and go to state 55
    ASSIGNOP  shift, and go to state 56
    RELOP     shift, and go to state 57
    PLUS      shift, and go to state 58
    MINUS     shift, and go to state 59
    STAR      shift, and go to state 60
    DIV       shift, and go to state 61
    AND       shift, and go to state 62
    OR        shift, and go to state 63
    LB        shift, and go to state 64

    $default  reduce using rule 32 (VarStm)


State 37

   40 Exp: Constant .

    $default  reduce using rule 40 (Exp)


State 38

   41 Exp: Call .
   68 Call: Call . DOT ID
   69     | Call . DOT ID LP CallArgs RP

    DOT  shift, and go to state 65

    $default  reduce using rule 41 (Exp)


State 39

    5 Class: CLASS ID EXTENDS ID LC ClassStms . RC

    RC  shift, and go to state 66


State 40

   11 Fun: STATIC VarType ID . LP Args RP LC BaseStm RC

    LP  shift, and go to state 67


State 41

   42 Exp: ID DOT . Call
   43    | ID DOT . Constant

    ID     shift, and go to state 68
    INT    shift, and go to state 30
    FLOAT  shift, and go to state 31
    BOOL   shift, and go to state 32

    Constant  go to state 69
    Call      go to state 70


State 42

   10 Fun: VarType ID LP . Args RP LC BaseStm RC
   67 Call: ID LP . CallArgs RP

    TYPE    shift, and go to state 12
    ID      shift, and go to state 71
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    $default  reduce using rule 74 (EMPTY)

    VarType   go to state 72
    Args      go to state 73
    Arg       go to state 74
    Exp       go to state 75
    Constant  go to state 37
    Call      go to state 38
    CallArgs  go to state 76
    CallArg   go to state 77
    EMPTY     go to state 78


State 43

   59 Exp: ID DPLUS .

    $default  reduce using rule 59 (Exp)


State 44

   61 Exp: ID DMINUS .

    $default  reduce using rule 61 (Exp)


State 45

   42 Exp: ID . DOT Call
   43    | ID . DOT Constant
   59    | ID . DPLUS
   61    | ID . DMINUS
   63 Constant: ID .
   67 Call: ID . LP CallArgs RP

    DOT     shift, and go to state 41
    LP      shift, and go to state 79
    DPLUS   shift, and go to state 43
    DMINUS  shift, and go to state 44

    $default  reduce using rule 63 (Constant)


State 46

   46 Exp: Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   57    | Exp . LB Exp RB

    STAR  shift, and go to state 60
    DIV   shift, and go to state 61
    LB    shift, and go to state 64

    $default  reduce using rule 55 (Exp)


State 47

   46 Exp: Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   57    | Exp . LB Exp RB

    LB  shift, and go to state 64

    $default  reduce using rule 56 (Exp)


State 48

   46 Exp: Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   57    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 56
    RELOP     shift, and go to state 57
    PLUS      shift, and go to state 58
    MINUS     shift, and go to state 59
    STAR      shift, and go to state 60
    DIV       shift, and go to state 61
    AND       shift, and go to state 62
    OR        shift, and go to state 63
    RP        shift, and go to state 80
    LB        shift, and go to state 64


State 49

   58 Exp: DPLUS ID .

    $default  reduce using rule 58 (Exp)


State 50

   60 Exp: DMINUS ID .

    $default  reduce using rule 60 (Exp)


State 51

   67 Call: ID . LP CallArgs RP

    LP  shift, and go to state 79


State 52

   62 Exp: NEW Call .
   68 Call: Call . DOT ID
   69     | Call . DOT ID LP CallArgs RP

    DOT  shift, and go to state 65

    $default  reduce using rule 62 (Exp)


State 53

   44 Exp: THIS DOT . Constant
   45    | THIS DOT . Call

    ID     shift, and go to state 68
    INT    shift, and go to state 30
    FLOAT  shift, and go to state 31
    BOOL   shift, and go to state 32

    Constant  go to state 81
    Call      go to state 82


State 54

   31 DeclareStm: VarType VarStm SEMI .

    $default  reduce using rule 31 (DeclareStm)


State 55

   33 VarStm: Exp COMMA . VarStm

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    VarStm    go to state 83
    Exp       go to state 36
    Constant  go to state 37
    Call      go to state 38


State 56

   48 Exp: Exp ASSIGNOP . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 84
    Constant  go to state 37
    Call      go to state 38


State 57

   51 Exp: Exp RELOP . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 85
    Constant  go to state 37
    Call      go to state 38


State 58

   46 Exp: Exp PLUS . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 86
    Constant  go to state 37
    Call      go to state 38


State 59

   47 Exp: Exp MINUS . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 87
    Constant  go to state 37
    Call      go to state 38


State 60

   52 Exp: Exp STAR . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 88
    Constant  go to state 37
    Call      go to state 38


State 61

   53 Exp: Exp DIV . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34

    Exp       go to state 89
    Constant  go to state 37
    Call      go to state 38


State 62

   49 Exp: Exp AND . Exp

    ID      shift, and go to state 45
    MINUS   shift, and go to state 25
    NOT     shift, and go to state 26
    LP      shift, and go to state 27
    DPLUS   shift, and go to state 28
    DMINUS  shift, and go to state 29
    INT     shift, and go to state 30
    FLOAT   shift, and go to state 31
    BOOL    shift, and go to state 32
    NEW     shift, and go to state 33
    THIS    shift, and go to state 34
